saving changes to CSS, fixed issue with light font visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   }
   
   textarea {
-    background: transparent;
+    background: #d3d3d3;
     border: none;
     resize: none;
     color: #000000;
@@ -44,17 +44,17 @@ body {
   
   .past {
     background-color: #d3d3d3;
-    color: white;
+    color: rgb(182, 74, 74);
   }
   
   .present {
     background-color: #ff6961;
-    color: white;
+    color: black;
   }
   
   .future {
     background-color: #77dd77;
-    color: white;
+    color: greenyellow;
   }
   
   .saveBtn {
